--- a/app/src/main/res/drawable/timer_circle_start.xml
+++ b/app/src/main/res/drawable/timer_circle_start.xml
@@ -5,6 +5,5 @@
     android:thickness="5dp"
     android:useLevel="false">
 
-    <solid android:color="@color/colorBase" />
-
+    <solid android:color="@color/colorComplement" />
 </shape>
