- Timer fully functional

--- a/app/src/main/res/layout/timer_display.xml
+++ b/app/src/main/res/layout/timer_display.xml
@@ -218,11 +218,11 @@
         android:layout_marginTop="4dp"
         android:background="@drawable/timer_circle_start"
         android:indeterminate="false"
+        android:layoutDirection="rtl"
         android:max="100"
         android:progress="100"
         android:progressDrawable="@drawable/timer_circle_end"
         android:rotation="90"
-        android:layoutDirection="rtl"
         app:layout_constraintBottom_toTopOf="@+id/play_fab_td"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -284,46 +284,36 @@
         android:id="@+id/play_fab_td"
         android:layout_width="65dp"
         android:layout_height="65dp"
-        android:layout_alignTop="@+id/pause_fav_td"
+        android:layout_alignTop="@+id/stop_fav_td"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="24dp"
         android:clickable="true"
         android:src="@drawable/icon_play"
         app:backgroundTint="@color/colorBase"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/pause_fav_td"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/stop_fav_td"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timer_circle_progress" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/stop_fav_td"
+        android:id="@+id/reset_fav_td"
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:layout_alignEnd="@+id/focus_arrow_td"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:clickable="true"
-        android:src="@drawable/icon_stop"
+        android:src="@drawable/icon_reset"
         app:backgroundTint="@color/colorBase"
-        app:layout_constraintBottom_toBottomOf="@+id/play_fab_td"
-        app:layout_constraintEnd_toStartOf="@+id/play_fab_td"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/play_fab_td" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/pause_fav_td"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:clickable="true"
-        android:src="@drawable/icon_pause"
-        app:backgroundTint="@color/colorBase"
-        app:layout_constraintBottom_toBottomOf="@+id/play_fab_td"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/play_fab_td"
-        app:layout_constraintTop_toTopOf="@+id/play_fab_td" />
+        app:layout_constraintBottom_toBottomOf="@+id/timer_circle_progress"
+        app:layout_constraintEnd_toEndOf="@+id/timer_circle_progress"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="@+id/timer_circle_progress"
+        app:layout_constraintTop_toBottomOf="@+id/current_timer_td"
+        app:layout_constraintVertical_bias="0.227" />
 
 </android.support.constraint.ConstraintLayout>
