--- a/app/src/main/res/drawable/timer_circle_end.xml
+++ b/app/src/main/res/drawable/timer_circle_end.xml
@@ -2,8 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:innerRadiusRatio="2.5"
     android:shape="ring"
-    android:thickness="5dp"
-    android:useLevel="false">
+    android:thickness="5dp">
 
-    <solid android:color="@color/colorBase" />
+    <solid android:color="@color/colorComplement" />
 </shape>
